# systemhealthcheck

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/systemhealthcheck/: api.py  health.py  monitor.py  utils.py
src/systemhealthcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/systemhealthscheck/: __init__.py  health.py
tests/: test_health.py
