[project]
name = "systemhealthcheck"
version = "0.1.0"
description = "A simple Python package to fetch system health metrics (CPU, memory, disk, uptime, and basic system info)."
readme = "README.md"
authors = [
    { name = "Akshay Sonawane", email = "akipomerian@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]