[project]
name = "systemhealthcheck"
version = "0.1.2"
description = "A simple Python package to fetch system health metrics."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9",
    "fastapi",
    "uvicorn[standard]"
]

[project.scripts]
systemhealthcheck = "systemhealthcheck.monitor:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
